src/tests/snapshots/hebi__tests__literals__dict.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Modules:


# Input:
{a:0, b:1, c:2}

# Result (success):
{"a": 0, "b": 1, "c": 2}

# Stdout:


