src/tests/snapshots/hebi__tests__literals__dict_expr_keys.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Input:
{["a"]:0, ["b"]:1, ["c"]:2}

# Result (success):
{"a": 0, "b": 1, "c": 2}

# Stdout:


