src/tests/snapshots/hebi__tests__literals__false.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Input:
false

# Result (success):
false

# Stdout:


