src/tests/snapshots/hebi__tests__literals__float.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Modules:


# Input:
0.1

# Result (success):
0.1

# Stdout:


