src/tests/snapshots/hebi__tests__literals__float_exp.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Input:
1.5e3

# Result (success):
1500

# Stdout:


