src/tests/snapshots/hebi__tests__literals__float_pi_n_exp.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Modules:


# Input:
3.14e-3

# Result (success):
0.00314

# Stdout:


