src/tests/snapshots/hebi__tests__literals__int.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Modules:


# Input:
1

# Result (success):
1

# Stdout:


