src/tests/snapshots/hebi__tests__literals__list.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Modules:


# Input:
[0, 1, 2]

# Result (success):
[0, 1, 2]

# Stdout:


