src/tests/snapshots/hebi__tests__literals__none.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Modules:


# Input:
none

# Result (success):
none

# Stdout:


