src/tests/snapshots/hebi__tests__literals__string.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Input:
"\tas\\df\u{2800}\x28\n"

# Result (success):
"	as\df⠀(
"

# Stdout:


