src/tests/snapshots/hebi__tests__literals__true.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Modules:


# Input:
true

# Result (success):
true

# Stdout:


